After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757240 - gedit and spacefm crashed in a gtk3 call.
gedit and spacefm crashed in a gtk3 call.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.18.x
Other Linux
: High critical
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-10-28 09:52 UTC by Dikiy
Modified: 2015-10-28 18:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gedit backtrace. (3.78 KB, text/plain)
2015-10-28 09:52 UTC, Dikiy
Details
backtrace from gedit with debug symbols included (4.08 KB, text/plain)
2015-10-28 11:25 UTC, Dikiy
Details
gtk "custom" css (3.74 KB, text/css)
2015-10-28 15:57 UTC, Dikiy
Details

Description Dikiy 2015-10-28 09:52:03 UTC
Created attachment 314300 [details]
gedit backtrace.

The spacefm and gedit applications crashed at start in a gtk3 library call. The problem is described here: https://bugs.archlinux.org/task/46839

backtrace from gedit attached.
Comment 1 Dikiy 2015-10-28 09:52:50 UTC
Arch distro, gtk3 version 3.18.2
Comment 2 Emmanuele Bassi (:ebassi) 2015-10-28 10:19:20 UTC
Thanks for taking the time to report this.
Unfortunately, that stack trace is missing some elements that will help a lot to solve the problem, so it will be hard for the developers to fix that crash. Can you get us a stack trace with debugging symbols? Please see https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces for more information on how to do so and reopen this bug report. Thanks in advance!
Comment 3 Dikiy 2015-10-28 11:24:30 UTC
done.
Comment 4 Dikiy 2015-10-28 11:25:08 UTC
Created attachment 314305 [details]
backtrace from gedit with debug symbols included
Comment 5 Dikiy 2015-10-28 11:33:55 UTC


  • #0 _gtk_css_section_print
    from /usr/lib/libgtk-3.so.0
  • #1 _gtk_css_section_to_string
    from /usr/lib/libgtk-3.so.0
  • #2 gtk_css_provider_parsing_error
    from /usr/lib/libgtk-3.so.0
  • #3 _gtk_marshal_VOID__BOXED_BOXED
    from /usr/lib/libgtk-3.so.0
  • #4 ??
    from /usr/lib/libgobject-2.0.so.0
  • #5 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #6 ??
    from /usr/lib/libgobject-2.0.so.0
  • #7 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #8 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #9 gtk_css_scanner_parser_error
    from /usr/lib/libgtk-3.so.0
  • #10 _gtk_css_parser_error
    from /usr/lib/libgtk-3.so.0
  • #11 enum_value_parse
    from /usr/lib/libgtk-3.so.0
  • #12 _gtk_css_style_funcs_parse_value
    from /usr/lib/libgtk-3.so.0
  • #13 gtk_css_provider_get_style_property
    from /usr/lib/libgtk-3.so.0
  • #14 gtk_style_provider_get_style_property
    from /usr/lib/libgtk-3.so.0
  • #15 gtk_style_cascade_get_style_property
    from /usr/lib/libgtk-3.so.0
  • #16 gtk_style_provider_get_style_property
    from /usr/lib/libgtk-3.so.0
  • #17 _gtk_style_context_peek_style_property
    from /usr/lib/libgtk-3.so.0
  • #18 gtk_widget_style_get_valist
    from /usr/lib/libgtk-3.so.0
  • #19 gtk_widget_style_get
    from /usr/lib/libgtk-3.so.0
  • #20 gtk_statusbar_init
    from /usr/lib/libgtk-3.so.0
  • #21 g_type_create_instance
    from /usr/lib/libgobject-2.0.so.0
  • #22 ??
    from /usr/lib/libgobject-2.0.so.0
  • #23 g_object_newv
    from /usr/lib/libgobject-2.0.so.0
  • #24 _gtk_builder_construct
    from /usr/lib/libgtk-3.so.0
  • #25 builder_construct.isra
    from /usr/lib/libgtk-3.so.0
  • #26 start_element
    from /usr/lib/libgtk-3.so.0
  • #27 ??
    from /usr/lib/libglib-2.0.so.0
  • #28 g_markup_parse_context_parse
    from /usr/lib/libglib-2.0.so.0
  • #29 _gtk_builder_parser_parse_buffer
    from /usr/lib/libgtk-3.so.0
  • #30 gtk_builder_extend_with_template
    from /usr/lib/libgtk-3.so.0
  • #31 gtk_widget_init_template
    from /usr/lib/libgtk-3.so.0
  • #32 ??
    from /usr/lib/gedit/libgedit.so
  • #33 g_type_create_instance
    from /usr/lib/libgobject-2.0.so.0
  • #34 ??
    from /usr/lib/libgobject-2.0.so.0
  • #35 g_object_new_valist
    from /usr/lib/libgobject-2.0.so.0
  • #36 g_object_new
    from /usr/lib/libgobject-2.0.so.0
  • #37 ??
    from /usr/lib/gedit/libgedit.so
  • #38 gedit_app_create_window
    from /usr/lib/gedit/libgedit.so
  • #39 ??
    from /usr/lib/gedit/libgedit.so
  • #40 ??
    from /usr/lib/gedit/libgedit.so
  • #41 g_cclosure_marshal_VOID__VOIDv
    from /usr/lib/libgobject-2.0.so.0
  • #42 ??
    from /usr/lib/libgobject-2.0.so.0
  • #43 ??
    from /usr/lib/libgobject-2.0.so.0
  • #44 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #45 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #46 g_application_activate
    from /usr/lib/libgio-2.0.so.0
  • #47 ??
    from /usr/lib/gedit/libgedit.so
  • #48 ffi_call_SYSV
    from /usr/lib/libffi.so.6
  • #49 ffi_call
    from /usr/lib/libffi.so.6
  • #50 g_cclosure_marshal_generic_va
    from /usr/lib/libgobject-2.0.so.0
  • #51 ??
    from /usr/lib/libgobject-2.0.so.0
  • #52 ??
    from /usr/lib/libgobject-2.0.so.0
  • #53 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #54 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #55 ??
    from /usr/lib/libgio-2.0.so.0
  • #56 ??
    from /usr/lib/libgio-2.0.so.0
  • #57 gtk_application_local_command_line
    from /usr/lib/libgtk-3.so.0
  • #58 g_application_run
    from /usr/lib/libgio-2.0.so.0
  • #59 main

Comment 6 Emmanuele Bassi (:ebassi) 2015-10-28 11:58:08 UTC
Re-opening; thanks for the updated stack trace!
Comment 7 Emmanuele Bassi (:ebassi) 2015-10-28 12:00:58 UTC
There seem to be a parsing error trying to bubble up.

Are you using Adwaita? Are you using any customisations on top of the theme?

Are there any other errors printed out in the session log, or on the terminal, if you launch gedit/spacefm manually?
Comment 8 Dikiy 2015-10-28 15:57:05 UTC
So, I localized the problem. I have had a custom gtk.css in a ~/.config/gtk-3.0 (I attach it now). But there were no problems before.
Comment 9 Dikiy 2015-10-28 15:57:54 UTC
Created attachment 314329 [details]
gtk "custom" css
Comment 10 Dikiy 2015-10-28 16:03:17 UTC
And there are no another errors printed out. Only the crash report in dmesg.
Comment 11 Emmanuele Bassi (:ebassi) 2015-10-28 16:08:24 UTC
Malformed CSS should definitely not make GTK crash.
Comment 12 Dikiy 2015-10-28 16:12:06 UTC
If I remove that file, there no more problems. So, it must be truly parser problem.
Comment 13 Emmanuele Bassi (:ebassi) 2015-10-28 16:14:52 UTC
Please, don't close the bug report: we're going to use it to track why the parser is breaking.
Comment 14 Benjamin Otte (Company) 2015-10-28 18:40:39 UTC
commit a58d8bdcbc291818ce70cf3e3fcb93e762ca9c36
Author: Benjamin Otte <otte@redhat.com>
Date:   Wed Oct 28 19:35:23 2015 +0100

    cssprovider: Have a section when parsing style properties
        
    Signal handlers expect a section to be present, so provide them with
    one.
                    
    New testcase included.